--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -1,7 +1,7 @@
 header {
     background-color: #000;
     width: 100%;
-    height: 90px;
+    
 
     nav {
         width: $container-width;
@@ -14,10 +14,11 @@ header {
                 color: #fff;
                 li{
                     list-style: none;
-                    margin: 0 15px;
+                    margin: 0 5px;
                     font-size: 0.8em;
                     margin-top: 10px;
                     opacity: 0.9;
+                    line-height: 15px;
                     i {
                         color: #009CFF;
                         margin-right: 10px;
@@ -35,6 +36,7 @@ header {
             margin-bottom: 10px;
             img {
                 width: 80px;
+                margin-right: 20px;
             }
             ul {
                 &.flex{
@@ -43,16 +45,87 @@ header {
                 color: #fff;
                 li{
                     list-style: none;
-                    margin: 0 15px;
-                    font-size: 0.8em;
-                    margin-top: 10px;
+                    margin: 0 10px;
+                    font-size: 0.75em;
+                    margin-top: 12px;
                     opacity: 0.9;
+                    line-height: 15px;
                 }
             }
+            
         }    
     }
     .jumbo {
+        width: 100%;
         height: 500px;
         background-size: cover;
+        background-position: center;
+        display: flex;
+        align-items: center;
+        .ctaJumbo{
+            height: 65%;
+            width: $container-width;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            justify-content: space-evenly;
+            img {
+                width: 250px;
+            }
+            p{
+                
+                line-height: 20px;
+                &.fucsia {
+                    width: auto;
+                }
+            }
+
+            .fucsia {
+                color: $secondaryColorJumbo;
+                &.bold {
+                    font-weight: 500;
+                }
+            }
+            .cta {
+                .myBtn {
+                    padding: 15px 20px;
+                    border: 2px solid black;
+                    background-color: #000;
+                    color: #fff;
+                    text-transform: uppercase;
+                    cursor: pointer;
+                    margin-right: 10px;
+                    &:hover{
+                        opacity: 0.8;
+                    }
+                    &.btnTrasp {
+                        background-color: transparent;
+                        color: #000;
+                        &:hover{
+                            opacity: 1;
+                        }
+                    }
+                }
+            }
+        }
     }
+    .navbar {
+        width: 100%;
+        
+    }
+}
+.navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E")!important;
+}
+#selectLen{
+                
+    height: 30px;
+}
+
+@media all and(max-width: 767px) {
+    header nav .top {
+        display: none;
+    }
+   
 }
