--- a/src/partials/_normalize.scss
+++ b/src/partials/_normalize.scss
@@ -3,4 +3,9 @@
     padding: 0;
     box-sizing: border-box;
     font-family: $font_family;
+    line-height: 0.5em;
+}
+li:hover{
+    text-decoration: underline;
+    cursor: pointer;
 }
